# poetry-compile-test

./: .gitignore  build.py  pyproject.toml
poetry_compile_test/: foo.py
